<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_com"
        android:enabled="true"
        android:icon="@drawable/ic_commity"
        android:title="@string/commity" />

    <item
        android:id="@+id/app_bar_diet"
        android:enabled="true"
        android:icon="@drawable/ic_diet"
        android:title="@string/diet_record" />

    <item
        android:id="@+id/app_bar_main"
        android:enabled="true"
        android:icon="@drawable/ic_main"
        android:title="@string/main_page" />

    <item
        android:id="@+id/app_bar_mypage"
        android:enabled="true"
        android:icon="@drawable/ic_mypage"
        android:title="@string/exercise_sit" />

    <item
        android:id="@+id/app_bar_menu"
        android:enabled="true"
        android:icon="@drawable/ic_menu"
        android:title="@string/preferences" />
</menu>