<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/communityMainFragment"
        android:enabled="true"
        android:tooltipText="@string/commity"
        android:icon="@drawable/ic_community"
        android:title="@string/commity" />

    <item
        android:id="@+id/dietRecordFragment"
        android:enabled="true"
        android:tooltipText="@string/diet_record"
        android:icon="@drawable/ic_diet"
        android:title="@string/diet_record" />

    <item
        android:id="@+id/mainFragment"
        android:enabled="true"
        android:tooltipText="@string/main_page"
        android:icon="@drawable/ic_main"
        android:title="@string/main_page">

    </item>

    <item
        android:id="@+id/exerciseStatusFragment"
        android:enabled="true"
        android:tooltipText="@string/exercise_sit"
        android:icon="@drawable/ic_my_page"
        android:title="@string/exercise_sit" />
    <item
        android:id="@+id/settingMainFragment"
        android:enabled="true"
        android:tooltipText="@string/preferences"
        android:icon="@drawable/ic_menu"
        android:title="@string/preferences" />
</menu>