<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_radius"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_newpost"
        style="@style/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/post_dialog_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/community_newpost_tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_newpost" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:background="@color/light_blue"
        android:hint="@string/community_newpost_title_hint"
        android:minHeight="50dp"
        android:textSize="@dimen/text_size_very_small"
        app:layout_constraintEnd_toEndOf="@id/btn_close"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_info"
        style="@style/subtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/community_newpost_tv_info"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/et_title" />

    <EditText
        android:id="@+id/et_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:background="@color/light_blue"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/community_newpost_tv_info_hint"
        android:inputType="text"
        android:minHeight="260dp"
        android:textSize="@dimen/text_size_very_small"
        app:layout_constraintBottom_toTopOf="@id/btn_write"
        app:layout_constraintEnd_toEndOf="@id/btn_close"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_info" />

    <ImageButton
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/community_newpost_close"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <android.widget.Button
        android:id="@+id/btn_write"
        style="@style/buttonText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_radius"
        android:text="@string/community_newpost_btn_write"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toStartOf="@id/btn_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_info" />

    <android.widget.Button
        android:id="@+id/btn_cancel"
        style="@style/buttonText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="@drawable/button_radius"
        android:backgroundTint="@color/gray"
        android:text="@string/community_newpost_btn_cancel"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btn_write"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_write"
        app:layout_constraintTop_toTopOf="@+id/btn_write" />

</androidx.constraintlayout.widget.ConstraintLayout>